added more features and polished the UI/UX
